--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,11 @@
-html, body, material-app, md-sidenav-container {
-  margin: 0;
-  width: 100%;
-  height: 100%;
-}
-md-sidenav {
-  width: 200px;
-}
+/*html, body, material-app, md-sidenav-container {*/
+  /*margin: 0;*/
+  /*width: 100%;*/
+  /*height: 100%;*/
+/*}*/
+/*md-sidenav {*/
+  /*width: 200px;*/
+/*}*/
 
 .text-center {
   text-align: center;
