--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
   <div td-toolbar-content>
     <md-icon style="position: absolute; right: 15px; top:20px">more_vert</md-icon>
   </div>
-  <div class="my-main-content">
+  <div class="my-main-content bgc-light-green">
     <router-outlet></router-outlet>
   </div>
 </td-layout-nav-list>
