--- a/src/app/league-review/league-review.component.css
+++ b/src/app/league-review/league-review.component.css
@@ -1,7 +1,5 @@
-.my-spacing-input {
-  margin: 0 10px 0 10px;
+.my-container {
+  display: flex;
+  flex-grow: 1;
+  z-index: 1;
 }
-.my-spacing-div {
-  margin: 50px 0 10px 0;
-}
-
