--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -1,41 +1,37 @@
 <div class="materialContainer">
   <div class="box">
-    <div class="title">LOGIN</div>
-    <div class="input">
-      <label for="name">Username</label>
-      <input type="text" name="name" id="name">
-      <span class="spin"></span>
+    <div class="my-title">LOGIN</div>
+    <div class="my-sign-in-container">
+      <md-input-container class="my-sign-in-input">
+        <input mdInput placeholder="Email" type="email">
+      </md-input-container>
+      <md-input-container class="my-sign-in-input">
+        <input mdInput type="password" placeholder="Password">
+      </md-input-container>
     </div>
-    <div class="input">
-      <label for="pass">Password</label>
-      <input type="password" name="pass" id="pass">
-      <span class="spin"></span>
+    <div class="my-spacing-input-vertical">
+      <button md-raised-button color="primary" class="my-sign-in-action my-spacing-input">Go</button>
     </div>
-    <div class="button login">
-      <button><span>GO</span> <i class="fa fa-check"></i></button>
+    <div class="my-spacing-input-vertical">
+      <button md-button color="primary" class="my-sign-in-action">Forgot your password?</button>
     </div>
-    <a href="" class="pass-forgot">Forgot your password?</a>
   </div>
   <div class="overbox">
     <div class="material-button alt-2"><span class="shape"></span></div>
-    <div class="title">REGISTER</div>
-    <div class="input">
-      <label for="regname">Username</label>
-      <input type="text" name="regname" id="regname">
-      <span class="spin"></span>
+    <div class="my-title">REGISTER</div>
+    <div class="my-sign-in-container">
+      <md-input-container class="my-overlap-container my-sign-in-input">
+        <input mdInput placeholder="Email" type="email">
+      </md-input-container>
+      <md-input-container class="my-overlap-container my-sign-in-input">
+        <input mdInput type="password" placeholder="Password">
+      </md-input-container>
+      <md-input-container class="my-overlap-container my-sign-in-input">
+        <input mdInput type="password" placeholder="Re-type password">
+      </md-input-container>
     </div>
-    <div class="input">
-      <label for="regpass">Password</label>
-      <input type="password" name="regpass" id="regpass">
-      <span class="spin"></span>
-    </div>
-    <div class="input">
-      <label for="reregpass">Repeat Password</label>
-      <input type="password" name="reregpass" id="reregpass">
-      <span class="spin"></span>
-    </div>
-    <div class="button">
-      <button><span>NEXT</span></button>
+    <div class="my-overlap-container my-spacing-input-vertical">
+      <button md-raised-button color="primary" class="my-sign-in-action my-spacing-input">Next</button>
     </div>
   </div>
 </div>
