--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 /*}*/
 
 .my-spacing-input {
-  margin: 0 10px 0 10px;
+  margin: 10px 10px 10px 10px;
 }
 .my-spacing-div {
   margin: 50px 0 10px 0;
