--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,15 @@
     <span class="my-greeting" *ngIf="!(media.registerQuery('gt-sm') | async)">
       Welcome, guest!
     </span>
+    <button md-icon-button [mdMenuTriggerFor]="menu" style="position: absolute; right: 10px; top:15px">
+      <md-icon>more_vert</md-icon>
+    </button>
+    <md-menu #menu="mdMenu">
+      <button md-menu-item routerLink="/league-review">Review leagues
+      </button>
+      <button md-menu-item routerLink="/sign-in">Sign in
+      </button>
+    </md-menu>
   </div>
   <md-nav-list td-sidenav-content>
     <ul>
@@ -20,9 +29,6 @@
       <li>About</li>
     </ul>
   </md-nav-list>
-  <div td-toolbar-content>
-    <md-icon style="position: absolute; right: 15px; top:20px">more_vert</md-icon>
-  </div>
   <div class="my-main-content bgc-light-green">
     <router-outlet></router-outlet>
   </div>
