--- a/src/theme.scss
+++ b/src/theme.scss
@@ -3,7 +3,7 @@
 
 $my-app-primary: mat-palette($mat-light-green, 800);
 $my-app-accent:  mat-palette($mat-cyan, 500, 900, A100);
-$my-app-warn:    mat-palette($mat-deep-orange);
+$my-app-warn:    mat-palette($mat-red);
 
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
