--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -25,7 +25,7 @@
         </md-input-container>
       </div>
       <div class="my-spacing-input-vertical">
-        <button type="submit" md-raised-button color="primary" class="my-sign-in-action my-spacing-input">Go</button>
+        <button type="submit" routerLink="/league-review" md-raised-button color="primary" class="my-sign-in-action my-spacing-input">Go</button>
       </div>
       <div class="my-spacing-input-vertical">
         <button md-button color="primary" class="my-sign-in-action">Forgot your password?</button>
