--- a/src/app/match-card/match-card.component.html
+++ b/src/app/match-card/match-card.component.html
@@ -1,4 +1,4 @@
-<md-card>
+<md-card class="my-fulfill-parent">
   <md-card-content>
     <md-grid-list cols="5" rowHeight="2:1">
       <md-grid-tile>
