--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <td-layout-nav-list color="primary"
-                    [opened]="media.registerQuery('gt-sm') | async"
+                    [opened]="media.registerQuery('gt-md') | async"
                     [mode]="(media.registerQuery('gt-sm') | async) ? 'side' : 'over'"
-                    [sidenavWidth]="(media.registerQuery('gt-xs') | async) ? '250px' : '100%'">
+                    [sidenavWidth]="(media.registerQuery('gt-xs') | async) ? '300px' : '100%'">
   <!--[opened]="media.registerQuery('gt-sm') | async"-->
   <div td-sidenav-toolbar-content>
     <span class="my-greeting" *ngIf="media.registerQuery('gt-sm') | async">
@@ -15,19 +15,55 @@
     <button md-button routerLink="/sign-in" class="my-toolbar-button">
       Sign in
     </button>
-    <!--<md-menu #menu="mdMenu">-->
-      <!--<button md-menu-item routerLink="/league-review">Review leagues-->
-      <!--</button>-->
-      <!--<button md-menu-item routerLink="/sign-in">Sign in-->
-      <!--</button>-->
-    <!--</md-menu>-->
   </div>
-  <md-nav-list td-sidenav-content>
-    <button md-button routerLink="/league-review" class="my-button-larger" color="primary">
-      League review
-    </button>
+  <md-nav-list routerLink="/league-review" td-sidenav-content>
+    <md-card>
+      <img md-card-lg-image src="../assets/student.svg">
+      <md-card-header>Username</md-card-header>
+      <md-card-subtitle>Level</md-card-subtitle>
+      <md-card-content>
+        Hi, I just want to have fun! Join to my tournament and we will see who can make better prediction!
+        <div class="my-button-larger">
+          <br>
+          Points: 1 000
+          <br>
+          Tokens: 20
+        </div>
+      </md-card-content>
+      <md-card-actions>
+        <button md-button>Information</button>
+        <button md-button>Settings</button>
+      </md-card-actions>
+    </md-card>
+    <a md-list-item>
+      <md-icon md-list-avatar svgIcon="league-review"></md-icon>
+      <h3 md-line>Review leagues</h3>
+    </a>
+    <md-divider md-inset></md-divider>
+    <a md-list-item>
+      <md-icon md-list-avatar svgIcon="tournament-create"></md-icon>
+      <h3 md-line>Create tournament</h3>
+    </a>
+    <md-divider md-inset></md-divider>
+    <a md-list-item>
+      <md-icon md-list-avatar svgIcon="tournament-review"></md-icon>
+      <h3 md-line>Review tournaments</h3>
+    </a>
+    <a md-list-item style="position: absolute; bottom: 5px; width: 100%">
+      <md-icon md-list-avatar svgIcon="us"></md-icon>
+      <h3 md-line>About us</h3>
+    </a>
+    <!--<button md-button routerLink="/league-review" class="my-button-larger" color="primary">-->
+    <!--League review-->
+    <!--</button>-->
+    <div style="font-size: xx-small; position: absolute; bottom: 0; color: black; right: 15px">Icons made by <a
+      href="http://www.freepik.com" title="Freepik">Freepik</a> from <a
+      href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by
+      <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0
+        BY</a>
+    </div>
   </md-nav-list>
-  <div class="my-main-content bgc-light-green">
+  <div class="my-main-content">
     <router-outlet></router-outlet>
   </div>
 </td-layout-nav-list>
