--- a/src/app/league-review/league-review.component.html
+++ b/src/app/league-review/league-review.component.html
@@ -25,13 +25,32 @@
     </md-card-title>
     <md-tab-group>
       <md-tab label="Matches">
-        <md-grid-list [cols]="(media.registerQuery('gt-md') | async) ? 2 : 1" rowHeight="5:1">
+        <md-grid-list [cols]="(media.registerQuery('gt-lg') | async) ? 2 : 1" rowHeight="5:1">
           <md-grid-tile *ngFor="let match of matches">
             <app-match-card [match]="match"></app-match-card>
           </md-grid-tile>
         </md-grid-list>
       </md-tab>
       <md-tab label="Table">
+        <table td-data-table>
+          <th td-data-table-column>
+            <md-icon>comment</md-icon>
+            <span>Comments</span>
+          </th>
+          <th td-data-table-column
+              *ngFor="let column of columns"
+              [numeric]="column.numeric">
+            {{column.label}}
+          </th>
+          <tr td-data-table-row *ngFor="let row of data">
+            <td td-data-table-cell (click)="openPrompt(row, 'comments')">
+              <button md-button [class.mat-accent]="!row['comments']">{{row['comments'] || 'Add Comment'}}</button>
+            </td>
+            <td td-data-table-cell *ngFor="let column of columns" [numeric]="column.numeric">
+              {{column.format ? column.format(row[column.name]) : row[column.name]}}
+            </td>
+          </tr>
+        </table>
       </md-tab>
       <md-tab label="Teams">Content 3</md-tab>
     </md-tab-group>
