--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 /*html, body, material-app, md-sidenav-container {*/
   /*margin: 0;*/
   /*width: 100%;*/
