--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     </button>
   </div>
   <md-nav-list td-sidenav-content>
-    <md-card style="margin-bottom: 20px">
+    <md-card style="margin-bottom: 20px" *ngIf="false">
       <md-card-header>
         <img md-card-avatar src="../assets/student.svg">
         <md-card-title>Username</md-card-title>
